[tool.poetry]
name = "timing"
version = "0.1.0"
description = ""
authors = ["ryzhovalex <thed4rkof@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydub = "^0.25.1"
simpleaudio = "^1.0.4"

[tool.poetry.scripts]
timing = "timing.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
